# SQLInspector

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: release.yml
sql-inspector/: middleware.py
sql-package/: README.md  pyproject.toml  test_new.py
sql-package/sql_inspector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sql-package/tests/: settings.py  test_new.py
sql-package/tests/test_app/: urls.py
sqlinspector/: asgi.py  settings.py  urls.py  wsgi.py
sqlquery/: factory.py  models.py  views.py
sqlquery/migrations/: 0001_initial.py
tests/: test_new.py
tests/test_app/: models.py  views.py
