[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-inspector"
version = "1.0.1"
description = "A django middleware package to print out queries in the terminal"
license = { text = "MIT" }
authors = [
      { name = "Aryaman Awasthi", email = "aryaman.awasthi79@gmail.com" },
]

dependencies =[
      "Pygments>=2.16.1", "sqlparse>=0.4.4"
]

requires-python = ">=3.11"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools.packages.find]
include = ["sql-inspector"]


[project.urls]
Homepage = "https://github.com/aryaman-awasthi/SQLInspector"
